# src/apis_set_1/views/admin_views/admin_protected.go
@@ -14,7 +14,13 @@ import (
 )
 
 type VideoUploadStruct struct {
-	File *multipart.FileHeader `form:"file" binding:"required"`
+	VideoFile        *multipart.FileHeader `form:"video_file" binding:"required"`
+	PreviewImageFile *multipart.FileHeader `form:"preview_image_file" binding:"required"`
+}
+type VideoInfoStruct struct {
+	Title       string `form:"title" binding:"required"`
+	Description string `form:"description"`
+	CreatedBy   string `form:"created_by" binding:"required"`
 }
 
 // @BasePath /api/
@@ -24,15 +30,17 @@ type VideoUploadStruct struct {
 // @Tags Video upload
 // @Accept mpfd
 // @Produce json
-// @Param file formData file true "File"
+// @Param video_file formData file true "Video file"
+// @Param preview_image_file formData file true "Preview image file"
+// @Param form_data formData VideoInfoStruct true "Video upload"
 // @Success 200 {object} my_modules.ResponseFormat
 // @Failure 400 {object} my_modules.ResponseFormat
 // @Failure 403 {object} my_modules.ResponseFormat
 // @Failure 500 {object} my_modules.ResponseFormat
 // @Router /admin/upload_streaming_video/ [post]
 func UploadVideo(c *gin.Context) {
-	var form VideoUploadStruct
-	video_title := "tutorial_name.mp4"
+	var uploadForm VideoUploadStruct
+	var infoForm VideoInfoStruct
 	base_path := "uploads"
 	protected_video := fmt.Sprintf("%s/private/video", base_path)
 	unprotected_video := fmt.Sprintf("%s/public/video", base_path)
@@ -41,13 +49,18 @@ func UploadVideo(c *gin.Context) {
 		my_modules.CreateAndSendResponse(c, http.StatusBadRequest, "error", "Error creating directory", nil)
 		return
 	}
-	if err := c.ShouldBind(&form); err != nil {
+	if err := c.ShouldBind(&uploadForm); err != nil {
 		log.Errorln(err)
-		my_modules.CreateAndSendResponse(c, http.StatusBadRequest, "error", "Invalid payload", nil)
+		my_modules.CreateAndSendResponse(c, http.StatusBadRequest, "error", "Invalid upload payload", nil)
+		return
+	}
+	if err := c.ShouldBind(&infoForm); err != nil {
+		log.Errorln(err)
+		my_modules.CreateAndSendResponse(c, http.StatusBadRequest, "error", "Invalid data payload", nil)
 		return
 	}
 	// file_part := strings.Split(form.File.Filename, ".")
-	file_part := strings.Split(video_title, ".")
+	file_part := strings.Split(uploadForm.VideoFile.Filename, ".")
 	if len(file_part) <= 1 {
 		my_modules.CreateAndSendResponse(c, http.StatusBadRequest, "error", "File name doesn't contain file extension", nil)
 		return
@@ -55,7 +68,7 @@ func UploadVideo(c *gin.Context) {
 	file_name, file_ext := strings.Join(file_part[:len(file_part)-1], "."), file_part[len(file_part)-1]
 	dst_file_path := fmt.Sprintf("%s/%s_%d.%s", upload_path, file_name, time.Now().UnixMilli(), file_ext)
 	// dst_file_path := fmt.Sprintf("./uploads/original_video/%s", video_title)
-	if err := c.SaveUploadedFile(form.File, dst_file_path); err != nil {
+	if err := c.SaveUploadedFile(uploadForm.VideoFile, dst_file_path); err != nil {
 		log.Errorln(err)
 		my_modules.CreateAndSendResponse(c, http.StatusBadRequest, "error", "Failed to upload file", nil)
 		return
